# docusaurus-with-auth

./: .gitignore  LICENSE  Makefile  manage.py  pyproject.toml
conf/: base.py  development.py  production.py  testing.py
docker/development/: docker-compose.yaml
frontend/: docusaurus.config.ts  package.json
frontend/templates/: 400.html  404.html  login.html
shared/: types.py  utils.py
src/domain/: session.py  user.py
src/infra/db/: __init__.py  db_adapter.py
src/interface/api/http/: asgi.py  controllers.py  middleware.py  routers.py  utils.py
src/interface/api/rest/: asgi.py  controllers.py  exceptions.py  middleware.py  routers.py
src/interface/cli/: commands.py
