[project]
name = "docusaurus-with-auth"
version = "0.0.1"
description = "A FastAPI application using SSR to serve docusaurus documentation"
authors = [{ name = "firminoneto11", email = "firminoneto11@hotmail.com" }]
dependencies = [
    "fastapi==0.111.0",
    "pydantic==2.7.4",
    "odmantic==1.0.2",
    "uvloop==0.19.0",
    "httptools==0.6.1",
    "environs==11.0.0",
    "typer==0.12.3",
    "asgi-correlation-id==4.3.1",
    "jinja2==3.1.4",
    "httpx==0.27.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff==0.4.10"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docusaurus-with-auth"]

# Ruff configs
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
